任务评价流程

--- a/public/views/renwu.html
+++ b/public/views/renwu.html
@@ -147,7 +147,7 @@ Purchase: http://wrapbootstrap.com
                                     <td>2015</td>
                                     <td>15052313</td>
                                     <td class="scrollNav"><a  href="#pingjia" data-mode="" class="btn btn-success btn-xs commetD"><i class="fa fa-share"></i>评价详情</a></td>
-                                    <td class="center "><a href="javascript:;" data-mode="1"  class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
+                                    <td class="center "><a href="javascript:;" data-mode="14031238"  class="btn btn-success btn-xs edit"><i class="fa fa-share"></i>开会记录</a></td>
                                     <td>
                                         <a href="javascript:;" data-mode="" class="btn btn-primary btn-xs more"><i class="fa fa-share"></i>计划详情 </a>
                                     </td>
