--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -82,6 +82,7 @@ Purchase: http://wrapbootstrap.com
     <li><a href="#pingjia">学生评价表</a></li>
     &lt;!&ndash;<li><a href="#options">Options</a></li>&ndash;&gt
 </ul>
+
 <!-- contanier -->
 <div class="container">
     <section style="margin-top: 35px;">
@@ -126,33 +127,7 @@ Purchase: http://wrapbootstrap.com
                                     </th>
                                 </tr>
                                 </thead>
-                                <tbody>
-                                {{each taskLists as task i}}
-                                <tr>
-                                    <td>{{task.name}}</td>
-                                    <td>{{task.xueqi}}</td>
-                                    <td>{{task.start_time}}</td>
-                                    <td>{{task.deadline}}</td>
-                                    <td>{{task.content}}</td>
-                                    <td>131311</td>
-                                    <td>{{task.remark}}</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment" data-mode="{{task.remark}}"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
-                                {{/each}}
-                                <tr>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td>15052313</td>
-                                    <td>误会风</td>
-                                    <td>131311</td>
-                                    <td>2015</td>
-                                    <td class="scrollNav">
-                                        <a href="#pingjia" class="btn btn-primary btn-xs editComment"><i class="fa fa-edit"></i>编辑 </a>
-                                    </td>
-                                </tr>
+                                <tbody id="taskListContainer">
                                 </tbody>
                             </table>
                         </div>
@@ -171,7 +146,7 @@ Purchase: http://wrapbootstrap.com
                                 <input type="text" class="form-control input-xl" id="xlginput" placeholder="">
 
                             </div>
-                            <a href="javascript:;" id="rate" class="btn btn-primary btn-block"> 保存 </a>
+                            <a href="javascript:;" id="rate" class="btn btn-primary btn-block" data-mode=""> 保存 </a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +169,22 @@ Purchase: http://wrapbootstrap.com
 
 <!--Page Related Scripts-->
 <!--Sparkline Charts Needed Scripts-->
-
+<script id="taskList" type="text/html">
+    {{each taskLists as task i}}
+    <tr>
+    <td>{{task.name}}</td>
+    <td>{{task.xueqi}}</td>
+    <td>{{task.start_time}}</td>
+    <td>{{task.deadline}}</td>
+    <td>{{task.content}}</td>
+    <td>131311</td>
+    <td>{{task.remark}}</td>
+    <td class="scrollNav">
+        <a href="#pingjia" class="btn btn-primary btn-xs editComment" data-mode='{{task.id}}' onclick="rateBTn(this)"><i class="fa fa-edit"></i>编辑 </a>
+        </td>
+        </tr>
+        {{/each}}
+</script>
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../js/pageNav.js"></script>
