博文简介description 修复

--- a/public/views/postList.html
+++ b/public/views/postList.html
@@ -17,7 +17,7 @@
     <!-- personal styles -->
    <link href="../styles/postList.css" rel="stylesheet">
 
-    <title>成果展示</title>
+    <title>文章分享</title>
 </head>
 <body>
 <!-- Navigation -->
@@ -117,7 +117,7 @@
                         <span><i class="fa fa-comment-o"></i> 1</span>
 
                     </div>
-                    <p>{{post.content}}</p>
+                    <p>{{post.description}}</p>
                     <!-- <p>最近几年，随着比特币的兴起并不断走高的价格，越来越多的投资者和机构开始对数字货币这一新兴概念产生了兴趣。由比特币创建并使用的区块链技术也获得了从创业公司到金融巨头的广泛关注和参与。</p> -->
                     <a href="postDetail.html?index={{post.id}}"><button type="button" class="btn btn-success" id="{{post.id}}">继续阅读 >></button></a>
                 </div>
