--- a/public/views/modifyPassword.html
+++ b/public/views/modifyPassword.html
@@ -26,14 +26,14 @@
     <!-- Custom styles for this template -->
 
     <link href="../styles/register.css" rel="stylesheet">
-    <title>注册</title>
+    <title>修改密码</title>
 </head>
 <body>
 <div class="container">
     <div id="main">
         <div class="row logoNav" id="logoNav">
             <div class="col-sm-5">
-                <p>用户注册</p>
+                <p>密码修改</p>
             </div>
             <div class="col-sm-3 col-sm-offset-4">
                 <img src="../images/logo2.png" class=" myLogo">
@@ -48,35 +48,41 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="password" class="col-sm-3 control-label">密码</label>
+                <label for="password" class="col-sm-3 control-label">原密码</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="请输入密码"  required oninvalid="setCustomValidity('请输入密码！');" oninput="setCustomValidity('');">
+                    <input type="text" class="form-control" id="password" name="password" placeholder="请输入原密码" autofocus required oninvalid="setCustomValidity('请输入用户名！');" oninput="setCustomValidity('');">
                 </div>
             </div>
             <div class="form-group">
-                <label for="rpw" class="col-sm-3 control-label">确认密码</label>
+                <label for="new_password" class="col-sm-3 control-label">新密码</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" id="rpw" placeholder="请再次输入密码"  required oninvalid="setCustomValidity('请确认密码！');" oninput="setCustomValidity('');">
+                    <input type="password" class="form-control" id="new_password" name="new_password" placeholder="请输入新密码"  required oninvalid="setCustomValidity('请输入密码！');" oninput="setCustomValidity('');">
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-9">
-                    <a href="/login">已有账号，去登录</a>
+                <label for="rpw" class="col-sm-3 control-label">确认新密码</label>
+                <div class="col-sm-8">
+                    <input type="password" class="form-control" id="rpw" placeholder="请再次输入新密码"  required oninvalid="setCustomValidity('请确认密码！');" oninput="setCustomValidity('');">
                 </div>
             </div>
+            <!--<div class="form-group">-->
+                <!--<div class="col-sm-offset-3 col-sm-9">-->
+                    <!--<a href="/login">已有账号，去登录</a>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="form-group">
-                <div class="col-sm-offset-3 col-sm-4">
-                    <button id="submitBtn" class="btn  btn-success">&nbsp&nbsp注册&nbsp&nbsp  </button>
+                <div class="col-sm-offset-4 col-sm-6">
+                    <button id="submitBtn" class="btn  btn-success">&nbsp&nbsp确认修改&nbsp&nbsp  </button>
                 </div>
-                <div class="col-sm-4">
-                    <button id="reset" class="btn  btn-warning">&nbsp&nbsp重置&nbsp&nbsp</button>
-                </div>
+                <!--<div class="col-sm-4">-->
+                    <!--<button id="reset" class="btn  btn-warning">&nbsp&nbsp重置&nbsp&nbsp</button>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
 </div>
 <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="../lib/artDialog/jquery.artDialog.js"></script>
-<script src="../scripts/register.js"></script>
+<script src="../scripts/modifyPassword.js"></script>
 </body>
 </html>
