--- a/public/views/postDetail.html
+++ b/public/views/postDetail.html
@@ -51,7 +51,8 @@
                 <li id="activityPage"><a href="activity.html">活动展示</a> </li>
                 <li id="resource"><a href="resource.html">资源下载</a></li>
                 <li id="commentPage"><a href="comments.html">讨论区</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
+                <li id="publish"><a href="markdownEditor.html">发布</a></li>
+                <li><a href="renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -218,6 +219,7 @@
 <script type="text/javascript" src="../editor/js/editormd.min.js"></script>
 <script src="../js/jquery.params.js"></script>
 <script  src="../scripts/postDetail.js"></script>
+<script src="../scripts/nav.js"></script>
 <script type='text/javascript' src='../js/comment.js'></script>
 </body>
 </html>
