--- a/public/views/modifyPassword.html
+++ b/public/views/modifyPassword.html
@@ -41,12 +41,12 @@
         </div>
 
         <div class="form-horizontal" role="form">
-            <div class="form-group">
-                <label for="username" class="col-sm-3 control-label">用户名</label>
-                <div class="col-sm-8">
-                    <input type="text" class="form-control" id="username" name="username" placeholder="请输入用户名" autofocus required oninvalid="setCustomValidity('请输入用户名！');" oninput="setCustomValidity('');">
-                </div>
-            </div>
+            <!--<div class="form-group">-->
+                <!--<label for="username" class="col-sm-3 control-label">用户名</label>-->
+                <!--<div class="col-sm-8">-->
+                    <!--<input type="text" class="form-control" id="username" name="username" placeholder="请输入用户名" autofocus required oninvalid="setCustomValidity('请输入用户名！');" oninput="setCustomValidity('');">-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="form-group">
                 <label for="password" class="col-sm-3 control-label">原密码</label>
                 <div class="col-sm-8">
