博文列表 博文详情页初步成型

--- a/public/styles/postDetail.css
+++ b/public/styles/postDetail.css
@@ -6,3 +6,11 @@
 .dropdown-menu>li>a{
     color:#fff;
 }
+
+.blog-post-body{
+    text-align: center;
+}
+
+.blog-post-text{
+    padding-top: 20px;
+}
