--- a/public/views/postDetail.html
+++ b/public/views/postDetail.html
@@ -19,17 +19,7 @@
     <link href="../css/style.css" rel="stylesheet">
     <link href="../styles/postDetail.css" rel="stylesheet">
 
-    <link rel='stylesheet' id='app-css' href='../styles/comment.css' type='text/css' media='screen' />
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-49937515-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
+    <link rel='stylesheet' id='app-css' href="../css/commentCopy.css">
     <title></title>
 </head>
 <body>
@@ -78,7 +68,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <article class="blog-post">
                     <div class="blog-post-body">
-                        <h2><a href="javascript:void(0)" id="blog_title"></a></h2>
+                        <h2><span id="blog_title"></span></h2>
                         <div class="post-meta">
                             <span>by <a href="#" id="author_name"></a></span>
                             / <span><i class="fa fa-clock-o"></i><span id="created_time"></span></span>
@@ -208,7 +198,6 @@
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
 
-<script src="../js/mooz.scripts.min.js"></script>
 <script src="../editor/lib/marked.min.js"></script>
 <script src="../editor/lib/prettify.min.js"></script>
 <script src="../editor/lib/raphael.min.js"></script>
@@ -218,8 +207,19 @@
 <script src="../editor/lib/jquery.flowchart.min.js"></script>
 <script type="text/javascript" src="../editor/js/editormd.min.js"></script>
 <script src="../js/jquery.params.js"></script>
-<script  src="../scripts/postDetail.js"></script>
+
 <script src="../scripts/nav.js"></script>
 <script type='text/javascript' src='../js/comment.js'></script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49937515-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+<script  src="../scripts/postDetail.js"></script>
 </body>
 </html>
